<resources>

    <string name="app_name">Сейчас</string>
    <string name="about_title">О программе</string>

    <string name="going_right_now">Сейчас!</string>
    <string name="going_right_now_advert">сейчас</string>
    <string name="going_right_now_keywords">уже идет сейчас</string>
    <string name="already_ended">уже закончилось!</string>
    <string name="entrance_title">"ВХОД:"</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="day_after_tomorrow">Послезавтра</string>
    <string name="going_in">через</string>
    <string name="about_text"><b>Твой город интересный сейчас</b>\n\nПрограмма доступна для использования лицам от 16 лет и старше\n\nВоспользуюйтесь нашей формой добавления событий на сайте, чтобы о вашем событии и узнали все.\n<a href="http://nowapp.ru">nowapp.ru</a>\n\nПо всем вопросам вы можете обратиться по эл. адрессу\n<a href="mailto:team.nowapp@gmail.com">team.nowapp@gmail.com</a>\n\n\u00A9 2014\u20132015 &#171;Джус&#187;\n\n<b>Сделано:</b>\n\n<a href="http://ru-nekit-android.github.io/">ru.nekit.android</a></string>
    <string name="connection_is_not_available">Проверьте соединение с сетью Интернет</string>
    <string name="site_is_not_available">Сайт в данный момент недоступен</string>
    <string name="error_while_data_loading">Ошибка во время загрузки данных</string>
    <string name="offline_state_dialog_title">Оффлай режим</string>
    <string name="offline_state_dialog_text">Вы не подключены к сети Интернет.\nХотите просмотреть события в режиме оффлайн? \n\n<small>Предупреждение: возможно информация о некоторых событиях будет неактуальна.</small></string>
    <string name="default_state_dialog_text">Вы не подключены к сети Интернет.\nНажмите \"%s\" для закрытия программы.</string>
    <string name="default_state_dialog_title">Предупреждение</string>
    <string name="exit">Выход</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="add">Добавить</string>
    <string name="open_calendar">Открыть календарь после добавления события</string>
    <string name="offline_text">offline</string>
    <string name="switch_on">Включить</string>
    <string name="gps_is_off">GPS выключен</string>
    <string name="gps_switch_on_ask">GPS выключен. Хотите его включить?</string>
    <string name="dialog_title_add_to_calendar">Добавление события</string>
    <string name="dialog_text_add_to_calendar">Добавить событие в ваш календарь?\nВ дальнейшем данное событие можно всегда посмотреть в календаре.</string>
    <string name="search">Поиск</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="search_hint">Поиск</string>
    <string name="event.category.sport.keywords">спорт бег здоровье</string>
    <string name="event_category_other_keywords">другое корона</string>
    <string name="event_category_entertainment_keywords">развлечения веселье вечер</string>
    <string name="event_category_education_keywords">обучение книг* знания наука</string>
    <string name="event_category_culture_keywords">музыка культура исскуство</string>
    <string name="event_category_discount_keywords">скидка</string>
    <string name="enterance_title">\"ВХОД:\"</string>
    <string name="share_title">Поделиться</string>
    <string name="add_to_calendar_title">Добавить в календарь</string>
    <string name="add_to_calendar_dialog_title">В календарь</string>
    <string name="add_to_calendar_dialog_message">Вы хотите добавить событие в календарь?</string>
    <string name="remove_from_calendar_title">Удалить из календаря</string>
    <string name="show_in_calendar_title">Показать в календаре</string>
    <string name="add_to_calendar_message">Событие добавлено в календарь!</string>
    <string name="remove_from_calendar_message">Событие удалено из календаря!</string>
    <string name="open_calendar_message">Открыть</string>
    <string name="attention_short">А</string>
    <string name="loading">Загрузка…</string>
    <string name="update_app">Обновить</string>
    <string name="update_app_later">В следующий раз</string>
    <string name="update_app_title">Доступно обновление</string>
    <string name="update_app_message">Доступна новая версия для приложения. Пожалуйста, обновите до версии \"%s\" сейчас.</string>
    <string name="contentDescriptionStub">contentDescriptionStub</string>

    <string-array name="day_of_week">
        <item>ВС</item>
        <item>ПН</item>
        <item>ВТ</item>
        <item>СР</item>
        <item>ЧТ</item>
        <item>ПТ</item>
        <item>СБ</item>
    </string-array>

</resources>
