<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_about"
        android:title="@string/about_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/share_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_to_calendar"
        android:title="@string/add_to_calendar_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_from_calendar"
        android:title="@string/remove_from_calendar_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_in_calendar"
        android:title="@string/show_in_calendar_title"
        app:showAsAction="never" />
</menu>
